User sign up, sign in, and profile update complete

--- a/src/public/homePage.html
+++ b/src/public/homePage.html
@@ -8,13 +8,10 @@
 <body>
     <h1>HOME PAGE</h1>
     <hr>
-    <br>
-    <a href="/user-login">Log In</a>
+    <p>Get your tickets now</p>
+    <a href="/user">Go to user page</a>
     <hr>
-    <br>
-    <a href="/user-register">Sign Up</a>
-    <hr>
-    <br>
+    <p>Want to host an event? Click below to become a host</p>
     <a href="/host">Host an Event</a>
 </body>
 </html>
