--- a/src/public/homePage.html
+++ b/src/public/homePage.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Ticket</title>
 </head>
 <body>
     <h1>HOME PAGE</h1>
     <hr>
-    <p>Get your tickets now</p>
+    <p>Get your tickets NOW</p>
+    <a href="/events">Events</a>
+    <hr>
+    <p>Go to your Profile</p>
     <a href="/user">Go to user page</a>
     <hr>
-    <p>Want to host an event? Click below to become a host</p>
+    <p>Want to host an Event? Click below to become a Host</p>
     <a href="/host">Host an Event</a>
 </body>
 </html>
